unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>Batch ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>