unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/JobHasFailed__c.field-meta.xml
<CustomField>
    <fullName>JobHasFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job has failed</label>
    <type>Checkbox</type>
</CustomField>