unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>Job ID</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>