unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/JobIsCompleted__c.field-meta.xml
<CustomField>
    <fullName>JobIsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job is completed</label>
    <type>Checkbox</type>
</CustomField>