unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/JobIsTerminated__c.field-meta.xml
<CustomField>
    <fullName>JobIsTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job is terminated</label>
    <type>Checkbox</type>
</CustomField>