unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/Jobs__c.field-meta.xml
<CustomField>
    <fullName>Jobs__c</fullName>
    <description>The number of jobs in the process.</description>
    <label>Jobs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>