unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/JobUnitsExecuted__c.field-meta.xml
<CustomField>
    <fullName>JobUnitsExecuted__c</fullName>
    <label>Job units executed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>