unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <description>The process opration types are: insert and delete.</description>
    <label>Operation type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>