unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/ProcessId__c.field-meta.xml
<CustomField>
    <fullName>ProcessId__c</fullName>
    <label>Process ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>