unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/ProcessUnitsToExecute__c.field-meta.xml
<CustomField>
    <fullName>ProcessUnitsToExecute__c</fullName>
    <label>Process Units to execute</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>