unpackaged/main/default/objects/ForceeaAsyncNotification__e/fields/TotalJobUnits__c.field-meta.xml
<CustomField>
    <fullName>TotalJobUnits__c</fullName>
    <label>Total job units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>